<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.infomenu_activity">

    <TextView
        android:id="@+id/tvHeading3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="464dp"
        android:text="@string/scamsmart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <Button
        android:id="@+id/btnPhoneinfo"
        android:layout_width="288dp"
        android:layout_height="74dp"
        android:layout_marginTop="56dp"
        android:text="@string/tell_me_about_phone_scams"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading3" />

    <Button
        android:id="@+id/btnTextInfo"
        android:layout_width="292dp"
        android:layout_height="67dp"
        android:layout_marginTop="40dp"
        android:text="@string/tell_me_about_text_scams"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPhoneinfo" />

    <Button
        android:id="@+id/btnNumberInfo"
        android:layout_width="292dp"
        android:layout_height="67dp"
        android:layout_marginTop="48dp"
        android:text="@string/how_do_they_get_my_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTextInfo" />

    <Button
        android:id="@+id/btnReportInfo"
        android:layout_width="292dp"
        android:layout_height="67dp"
        android:layout_marginTop="44dp"
        android:text="@string/how_to_report_a_scam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNumberInfo" />
</androidx.constraintlayout.widget.ConstraintLayout>