<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.report_activity">

    <TextView
        android:id="@+id/tvHeading4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="464dp"
        android:text="@string/scamsmart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404" />

    <TextView
        android:id="@+id/tvScamNo"
        android:layout_width="139dp"
        android:layout_height="43dp"
        android:layout_marginTop="48dp"
        android:text="@string/enter_phone_no"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading4" />

    <EditText
        android:id="@+id/etScamNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading4" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="124dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvScamNo" />

    <Button
        android:id="@+id/btnReportNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toEndOf="@+id/tvDesc"
        app:layout_constraintTop_toBottomOf="@+id/etScamNumber" />
</androidx.constraintlayout.widget.ConstraintLayout>